# xstatic-moment

./: setup.cfg  setup.py
xstatic/pkg/moment/: __init__.py
