[metadata]
name = XStatic-Moment-Timezone
description = Timezone support for moment.js  (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://github.com/moment/moment-timezone
keywords = lodash xstatic
license = BSD
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
